# documentation/OpenAPI/de_interface.yaml
@@ -301,49 +301,6 @@ paths:
                   type: "other"
                   description: "No problem found with id 1"
 
-  /api/admin/my-problems:
-    get:
-      summary: Get all problems created by this admin, identified by UUID.
-      description: |
-        Retrieve all programming problems that admin created identified by UUID (should be admin only).
-
-        **Authentication required**: Include JWT token in the Authorization header:
-        `Authorization: Bearer [JWT]`
-      operationId: getAdminProblems
-      tags:
-        - Admin page
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: Successful retrieval of all problems
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/ProblemDetailsResponse'
-        '401':
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-              example:
-                value:
-                  type: "unauthorized"
-                  description: "User does not have admin permissions"
-        '404':
-          description: Endpoint not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-              example:
-                value:
-                  type: "not_found"
-                  description: "Endpoint not found"
-
   /api/admin/add-problem:
     post:
       summary: Add new problem
